create a quiz logic done, take a quiz layout done

--- a/qwizx-main/tsconfig.json
+++ b/qwizx-main/tsconfig.json
@@ -21,6 +21,6 @@
       "@/*": ["./*"]
     }
   },
-  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts", "components/GoogleSignIn.js"],
+  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts", "components/GoogleSignIn.js", "components/anim1.js"],
   "exclude": ["node_modules"]
 }
